Se modificaron los servicios y se empezo el diseño

--- a/PuntoVenta/_Imports.razor
+++ b/PuntoVenta/_Imports.razor
@@ -6,4 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using PuntoVenta
+@using PuntoVenta.Models
+@using PuntoVenta.Services
 @using PuntoVenta.Shared
+@using MatBlazor
