--- a/PuntoVenta/Pages/Records/Category.razor
+++ b/PuntoVenta/Pages/Records/Category.razor
@@ -1,71 +1,7 @@
-﻿@page "/Categoria"
-@page "/Categoria/{Id:int}"
-@using PuntoVenta.Models
+﻿@page "/Categorias"
 
-
-<EditForm Model="categories" OnValidSubmit="Save">
-        <DataAnnotationsValidator />
-
-        <div id="MainContainer" class="card">
-
-            <div id="PrincipalContainer" class="card-header">
-                <div class="form-group">
-                    <h5 id="Titulo">Registró Categorías</h5>
-                </div>
-            </div>
-            <div class="card-body">
-                @*CategoriasId*@
-                <div class="form-row aling-items-center">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="CategoriasIdPicker">Categoría Id</label>
-                            <div class="input-group">
-                                @*<InputNumber autoComplete="off" id="CategoriasIdPicker" class="form-control col-4" />*@
-                                <div class="form-group-append">
-                                    <button style="margin-left: 5px;" type="button" class="btn btn-primary input-group-text" @onclick="Buscar">
-                                        <span class="oi oi-zoom-in"></span> Buscar
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                @*Nombres*@
-                <div class="form-group">
-                    <label for="NombreCategoriaTextBox">Nombre Categoria</label>
-                    @*<InputText @bind-Value="categories.name" id="NombreCategoriaTextBox" class="form-control" autoComplete="off" />
-                    <ValidationMessage For="@(() => categorias.NombreCategoria)" />*@
-                    <small id="CompanyNameInLineHelper">
-                        Ingresar el(os) nombres de la categoria
-                    </small>
-                </div>
-            </div>
-
-            @*Buttons*@
-            <!--<div class="card-footer">
-
-        <div class="form-group text-center" display: inline-block>
-            <button type="button" class="btn btn-lg btn-primary" @onclick="Nuevo">
-                <span class="oi oi-plus" aria-hidden="true"></span> Nuevo
-            </button>
-
-            <button type="submit" class="btn btn-lg btn-success">
-                <span class="oi oi-clipboard" aria-hidden="true"></span> Guardar
-            </button>
-
-            <button class="btn btn-lg btn-danger" @onclick="ELiminar">
-                <span class="oi oi-trash" aria-hidden="true"></span> Eliminar
-            </button>
-        </div>
-
-    </div>-->
-        </div>
-    </EditForm>
-
-@code {
-    public Category categories = new Category();
+@code{
+    Category category = new Category();
 
     void Save() { }
-    void Buscar() { }
 }
