--- a/PuntoVenta/_Imports.razor
+++ b/PuntoVenta/_Imports.razor
@@ -9,4 +9,6 @@
 @using PuntoVenta.Models
 @using PuntoVenta.Services
 @using PuntoVenta.Shared
+@using PuntoVenta.Pages.Records
+ 
 @using MatBlazor
