--- a/PuntoVenta/Pages/_Host.cshtml
+++ b/PuntoVenta/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <base href="~/" />
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
     <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
+    <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
