--- a/PuntoVenta/Shared/MainLayout.razor
+++ b/PuntoVenta/Shared/MainLayout.razor
@@ -1,4 +1,13 @@
-﻿@inherits LayoutComponentBase
+﻿@using Blazored.Toast.Configuration
+@inherits LayoutComponentBase
+
+<BlazoredToasts Position="ToastPosition.BottomRight"
+                Timeout="10"
+                IconType="IconType.Material"
+                ErrorIcon="error_outline"
+                InfoIcon="school"
+                SuccessIcon="done_outline"
+                WarningIcon="warning" />
 
 <div class="sidebar">
     <NavMenu />
