--- a/PuntoVenta/Shared/NavMenu.razor
+++ b/PuntoVenta/Shared/NavMenu.razor
@@ -13,13 +13,23 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Categorias">
+            <NavLink class="nav-link" href="Categoria">
                 <span class="oi oi-spreadsheet" aria-hidden="true"></span> Categorias
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="Marca">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Marcas
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Cliente">
+                <span class="oi oi-person" aria-hidden="true"></span> Clientes
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Producto">
+                <span class="oi oi-person" aria-hidden="true"></span> Productos
             </NavLink>
         </li>
     </ul>
