--- a/PuntoVenta/Pages/Categories/CategoryRecord.razor
+++ b/PuntoVenta/Pages/Categories/CategoryRecord.razor
@@ -53,7 +53,7 @@
                 <button type="button" class="btn btn-primary" @onclick="New">
                     <span class="oi oi-plus"></span> Nuevo
                 </button>
-                <button type="submit" class="btn btn-success" @onclick="Save">
+                <button type="submit" class="btn btn-success">
                     <span class="oi oi-document">Guardar</span>
                 </button>
                 <button type="button" class="btn btn-danger" @onclick="Delete">
