--- a/PuntoVenta/Shared/NavMenu.razor
+++ b/PuntoVenta/Shared/NavMenu.razor
@@ -29,7 +29,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="Producto">
-                <span class="oi oi-person" aria-hidden="true"></span> Productos
+                <span class="oi oi-box" aria-hidden="true"></span> Productos
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Venta">
+                <span class="oi oi-dollar" aria-hidden="true"></span> Ventas
             </NavLink>
         </li>
     </ul>
