Se modificaron las vistas

--- a/PuntoVenta/Pages/Products/ProductRecord.razor
+++ b/PuntoVenta/Pages/Products/ProductRecord.razor
@@ -27,8 +27,8 @@
                             <div class="input-group">
                                 <InputNumber @bind-Value="product.Id" class="form-control col-4" />
                                 <div class="form-group-append">
-                                    <button class="btn btn-primary input-group-text" type="button" @onclick="Search">
-                                        <span class="oi oi-eye"></span> Buscar
+                                    <button class="btn btn-primary" type="button" @onclick="Search">
+                                        <span class="oi oi-magnifying-glass"></span> Buscar
                                     </button>
                                 </div>
                             </div>
