--- a/PuntoVenta/Pages/Categories/CategoryRecord.razor
+++ b/PuntoVenta/Pages/Categories/CategoryRecord.razor
@@ -25,8 +25,8 @@
                             <div class="input-group">
                                 <InputNumber @bind-Value="category.Id" class="form-control col-4" />
                                 <div class="form-group-append">
-                                    <button class="btn btn-primary input-group-text" type="button" @onclick="Search">
-                                        <span class="oi oi-eye"></span> Buscar
+                                    <button class="btn btn-primary" type="button" @onclick="Search">
+                                        <span class="oi oi-magnifying-glass"></span> Buscar
                                     </button>
                                 </div>
                             </div>
@@ -44,7 +44,6 @@
                     </small>
                 </div>
             </form>
-
         </div>
 
         @*Fotter*@
@@ -54,10 +53,10 @@
                     <span class="oi oi-plus"></span> Nuevo
                 </button>
                 <button type="submit" class="btn btn-success">
-                    <span class="oi oi-document">Guardar</span>
+                    <span class="oi oi-document"></span> Guardar
                 </button>
                 <button type="button" class="btn btn-danger" @onclick="Delete">
-                    <span class="oi oi-delete">Eliminar</span>
+                    <span class="oi oi-delete"></span> Eliminar
                 </button>
             </div>
         </div>
