--- a/PuntoVenta/Pages/Sales/SaleRecord.razor
+++ b/PuntoVenta/Pages/Sales/SaleRecord.razor
@@ -26,8 +26,8 @@
                             <div class="input-group">
                                 <InputNumber @bind-Value="sale.Id" id="VentaIdPicker" min="0" class="form-control col-4" />
                                 <div class="input-group-append">
-                                    <button type="button" class="btn btn-primary" @onclick="Search">
-                                        <span class="oi oi-zoom-in" /> Buscar
+                                    <button class="btn btn-primary" type="button" @onclick="Search">
+                                        <span class="oi oi-magnifying-glass"></span> Buscar
                                     </button>
                                 </div>
                             </div>
@@ -150,7 +150,7 @@
                 </button>
 
                 <button type="button" class="btn btn-lg btn-danger" @onclick="Delete">
-                    <span class="oi oi-trash"></span>   Eliminar
+                    <span class="oi oi-trash"></span> Eliminar
                 </button>
             </div>
         </div>
@@ -204,16 +204,14 @@
 
         var isProductFound = await productServices.GetOne(Convert.ToInt32(this.productId));
 
-        sale.SaleDetails.Add(
-            new SaleDetail()
-            {
-                Price = price,
-                ProductId = isProductFound.Id,
-                Product = isProductFound,
-                Quantity = quantity,
-                Total = quantity * price
-            }
-        );
+        sale.SaleDetails.Add(new SaleDetail()
+        {        
+            Price = price,
+            ProductId = isProductFound.Id,
+            Product = isProductFound,
+            Quantity = quantity,
+            Total = quantity * price     
+        });
     }
 
     protected void RemoveSaleDetail(SaleDetail saleDetail)
