--- a/PuntoVenta/Shared/MainLayout.razor
+++ b/PuntoVenta/Shared/MainLayout.razor
@@ -1,13 +1,12 @@
 ﻿@using Blazored.Toast.Configuration
 @inherits LayoutComponentBase
 
-<BlazoredToasts Position="ToastPosition.BottomRight"
+<BlazoredToasts Position="ToastPosition.TopRight"
                 Timeout="10"
-                IconType="IconType.Material"
-                ErrorIcon="error_outline"
-                InfoIcon="school"
-                SuccessIcon="done_outline"
-                WarningIcon="warning" />
+                IconType="IconType.FontAwesome"
+                SuccessClass="success-toast-override"
+                SuccessIcon="fa fa-thumbs-up"
+                ErrorIcon="fa fa-bug" />
 
 <div class="sidebar">
     <NavMenu />
