--- a/PuntoVenta/Pages/_Host.cshtml
+++ b/PuntoVenta/Pages/_Host.cshtml
@@ -32,6 +32,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <script src="~/js/jquery/jquery.min.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
