Se agregaron proyecto que se eliminaron posteriormente

--- a/PuntoVenta/Pages/_Host.cshtml
+++ b/PuntoVenta/Pages/_Host.cshtml
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PuntoVenta</title>
     <base href="~/" />
+    <link href="_content/Blazored.Typeahead/blazored-typeahead.css" rel="stylesheet" />
     <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
@@ -32,6 +33,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <script src="_content/Blazored.Typeahead/blazored-typeahead.js"></script>
     <script src="~/js/jquery/jquery.min.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
