--- a/PuntoVenta/Shared/NavMenu.razor
+++ b/PuntoVenta/Shared/NavMenu.razor
@@ -37,6 +37,11 @@
                 <span class="oi oi-dollar" aria-hidden="true"></span> Ventas
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="AutoComplete">
+                <span class="oi oi-dollar" aria-hidden="true"></span> Prueba
+            </NavLink>
+        </li>
     </ul>
 </div>
 
